Integration test added (based on spring-boot tomcacat)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 logging.level.org.foo=DEBUG
 #logging.level.org.springframework.data=DEBUG
-
+#logging.level.org.springframework=DEBUG
+server.servlet-path=/espring
+spring.data.mongodb.uri=mongodb://localhost/espring_production
+spring.data.mongodb.database=espring_production
