--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 logging.level.org.foo=DEBUG
 #logging.level.org.springframework.data=DEBUG
-#logging.level.org.springframework=DEBUG
+logging.level.org.springframework=DEBUG
 server.servlet-path=/espring
 spring.data.mongodb.uri=mongodb://localhost/espring_production
 spring.data.mongodb.database=espring_production
+
+# -1 for infinity number of retries to make action (send )
+# any positive number up to Integer.MAX value for certain number of retries
+# default 1
+org.foo.rabbitmq.retries_action_number=10
